[package]
name = "proxy"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["server", "client", "http1", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
serde_json = "1.0.91"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
strip = true

[target.x86_64-pc-windows-msvc]
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "link-arg=-Wl,-Bstatic",
]